--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,4 +1,4 @@
-// Twenty'em Child custom variables
+// MCE custom variables
 
 // Your variable overrides
 $icomoon-font-path: 		"../../twenty-em/fonts";
