--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -4,8 +4,8 @@
 $icomoon-font-path: 		"../../twenty-em/fonts";
 
 // Fonts
-$font-family-sans-serif:	"Lato";
-$headings-font-family:		"Dosis";
+$font-family-sans-serif:	"Lato", sans-serif;
+$headings-font-family:		"Dosis", sans-serif;
 
 // Spacers
 $spacer:					1rem;
