--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -101,7 +101,7 @@ body{
 // Singular
 //
 .hero,
-.singular-hero{
+.hero-header{
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
