--- a/css/theme.css
+++ b/css/theme.css
@@ -8438,10 +8438,10 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 @font-face {
   font-family: 'icomoon';
-  src: url("../../twenty-em/fonts/icomoon.ttf?586iop") format("truetype"), url("../../twenty-em/fonts/icomoon.woff?586iop") format("woff"), url("../../twenty-em/fonts/icomoon.svg?586iop#icomoon") format("svg");
+  src: url("../../twenty-em/node_modules/@themingisprose/icon-pack/fonts/icomoon.ttf?586iop") format("truetype"), url("../../twenty-em/node_modules/@themingisprose/icon-pack/fonts/icomoon.woff?586iop") format("woff"), url("../../twenty-em/node_modules/@themingisprose/icon-pack/fonts/icomoon.svg?586iop#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
-[class^="icomoon-"], [class*=" icomoon-"] {
+.icomoon {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: none;
@@ -9878,6 +9878,17 @@ a.text-dark:hover, a.text-dark:focus {
 
 .icomoon-youtube-with-circle:before {
   content: "\ead8"; }
+
+[class^="icomoon-"], [class*=" icomoon-"] {
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 .columns-2 {
   columns-count: 2;
