--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,7 +1,7 @@
 // MCE custom variables
 
 // Your variable overrides
-$icomoon-font-path: 		"../../twenty-em/fonts";
+$icomoon-font-path: 		"../../twenty-em/node_modules/@themingisprose/icon-pack/fonts";
 
 // Fonts
 $font-family-sans-serif:	"Lato", sans-serif;
