Actualización a Twenty'em 1.4.x

--- a/assets/src/scss/_custom.scss
+++ b/assets/src/scss/_custom.scss
@@ -1,7 +1,7 @@
 // MCE custom variables
 
 // Your variable overrides
-$icomoon-font-path: 		"../../twenty-em/node_modules/@themingisprose/icon-pack/fonts";
+$icomoon-font-path: 		"../../../../twenty-em/assets/dist/vendor/@themingisprose/icon-pack/fonts";
 
 // Fonts
 $font-family-sans-serif:	"Lato", sans-serif;
