--- a/assets/src/scss/theme.scss
+++ b/assets/src/scss/theme.scss
@@ -4,7 +4,7 @@
 // Imports
 //
 @import "custom";
-@import "../../twenty-em/scss/theme";
+@import "../../../../twenty-em/assets/src/scss/theme";
 
 //
 // Scaffolding
