--- a/assets/src/scss/theme.scss
+++ b/assets/src/scss/theme.scss
@@ -209,3 +209,13 @@ body{
 		background-color: rgba( $primary, .7);
 	}
 }
+
+//
+// Maintenance Mode
+//
+#social-profiles{
+	img{
+		width: 30px !important;
+		height: 30px !important;
+	}
+}
